force-app/main/default/objects/skilljar__Enrollment__c/skilljar__Enrollment__c.object-meta.xml
<CustomObject>
    <description>Contains Skilljar Enrollment and Purchase details for a Student and a Course</description>
    <label>Enrollment</label>
    <nameField>
        <label>Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>