force-app/main/default/objects/skilljar__Enrollment__c/fields/skilljar__Active__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An enrollment must be active and not expired for a student to access a course.</description>
    <inlineHelpText>The enrollment can be deactivated by refunds, manually set via the dashboard, or API calls that remove students.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>