force-app/main/default/objects/skilljar__Enrollment__c/fields/skilljar__Contact__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Salesforce Contact to Enrollment</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Skilljar Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>