force-app/main/default/objects/skilljar__Enrollment__c/fields/skilljar__Expires_At__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Expires_At__c</fullName>
    <description>Date time at which this enrollment expires</description>
    <label>Expires At</label>
    <type>DateTime</type>
</CustomField>