force-app/main/default/objects/skilljar__Enrollment__c/fields/skilljar__Lead__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Salesforce Lead to Enrollment</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Skilljar Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>