force-app/main/default/objects/skilljar__Enrollment__c/fields/skilljar__Obfuscated_Id__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Obfuscated_Id__c</fullName>
    <description>Id of the Enrollment in Skilljar</description>
    <externalId>true</externalId>
    <label>Skilljar Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>