force-app/main/default/objects/skilljar__Enrollment__c/fields/skilljar__Promocode__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Promocode__c</fullName>
    <description>Promocode used when purchasing the course.</description>
    <label>Promocode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>