force-app/main/default/objects/skilljar__Enrollment__c/fields/skilljar__Published_Course__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Published_Course__c</fullName>
    <label>Published Course</label>
    <referenceTo>skilljar__Published_Course__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>