force-app/main/default/objects/skilljar__Enrollment__c/fields/skilljar__Purchase__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Purchase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this enrollment was created as part of a Purchase (even a free Purchase), then this lookup points to the purchase that created the enrollment.</description>
    <label>Purchase</label>
    <referenceTo>skilljar__Purchase__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>