force-app/main/default/objects/skilljar__Enrollment__c/fields/skilljar__Purchase_Credits_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Purchase_Credits_Redeemed__c</fullName>
    <label>Purchase Credits Redeemed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>