force-app/main/default/objects/skilljar__Enrollment__c/fields/skilljar__Purchase_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Purchase_Currency_Code__c</fullName>
    <description>ISO 4217 code of the purchase currency.</description>
    <label>Purchase Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>