force-app/main/default/objects/skilljar__Enrollment__c/listViews/skilljar__All.listView-meta.xml
<ListView>
    <fullName>skilljar__All</fullName>
    <columns>skilljar__Student__c</columns>
    <columns>skilljar__Published_Course__c</columns>
    <columns>skilljar__Enrolled_At__c</columns>
    <columns>skilljar__Expires_At__c</columns>
    <columns>skilljar__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>